--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -8,5 +8,8 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1} - %m%n
 
-# An alternative logging format:
-#log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1} - %m%n
+# Hibernate logging options (INFO only shows startup messages)
+log4j.logger.org.hibernate=INFO
+
+# Log JDBC bind parameter runtime arguments
+log4j.logger.org.hibernate.type=trace
