--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
+		<!-- Database Connection -->
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
